--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,16 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Clonar este proyecto para tener una configuración inicial más avanzada.
 
-Things you may want to cover:
+Incluye:
 
-* Ruby version
+* Ruby 2.3.0
 
-* System dependencies
+* Rails 4.2.5.2
 
-* Configuration
+* Devise
 
-* Database creation
+* Cancancan
 
-* Database initialization
+* Twitter Bootstrap
 
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
